examples/vault/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`DOMAIN.PLACEHOLDER`)
      kind: Rule
      services:
        - name: vault
          port: 8200
  tls:
    secretName: vault-tls
